2009-09-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* configure.in: Consider recent name change from libopenvasmisc
	to libopenvas_misc. Also, libnasl is not separate anymore.

	* openvas.tmpl.in: Removed LIBNASL specific elements.

	* configure: Updated.

2009-09-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Post-release version bump.

	* VERSION: Set to 3.0.0.beta2.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2009-09-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Preparing the openvas-scanner 3.0.0-beta1 release.

	* VERSION: Set to 3.0.0.beta1

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* CHANGES: Updated.

2009-09-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* MANIFEST: Added missing file.

2009-09-23  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvassd/openvasd.c: (re)moved.

	* openvassd/openvassd.c: Moved from openvassd/openvasd.c.

	* openvasd/Makefile, MANIFEST: Adjusted.

	* openvassd/attack.c, openvassd/parser.c, openvassd/pluginlaunch.c,
	openvassd/processes.c: Adjusted comments.

	* doc/Doxyfile, doc/Doxyfile_full: Adjusted paths.

	* doc/session_saving.txt, doc/openvas-mkcert-client.1: Adjusted

2009-09-23  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Moved folder openvasd to openvassd.

	* openvasd, openvassd: Moved folder from openvasd to openvassd.

	* Makefile, MANIFEST: Adjusted paths.

2009-09-23  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* doc/openvassd.8.in: Replaced nessus by openvas.

	* configure.in: Corrected check for pthreads_enabled.

	* configure: Regenerated.

2009-09-22  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* packaging/fedora/openvas-server-1.0.0-1.fc8.openvas.spec,
	packaging/fedora/openvas-server-1.0.0-Makefile.diff, packaging/fedora/,
	packaging/opensuse/openvas-server-1.0.0-1.suse102.openvas.spec,
	packaging/opensuse/openvas-server-1.0.0-Makefile.diff,