@@ -1,3 +1,10 @@
+2009-09-25  Felix Wolfsteller <felix.wolfsteller@intevation.de>
+
+	* openvassd/otp_1_0.c: Adjusted includes.
+	(otp_1_0_server_send_certificates): Switch from
+	openvas-libraries/base/openvas_certificate to
+	openvas-libraries/base/certificate.
+
 2009-09-24  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* configure.in: Consider recent name change from libopenvasmisc
